--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,24 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  script(language="JavaScript")
+
+
+  dive(data-role="header")
+    h1= title
+    p Welcome to #{title}
+
+  dive(data-role="content")
+    iframe(src="http://www.baidu.com",width="100%",height="100%",id="iframe1",onLoad="autoResize('iframe1')")
+
+
+
+  dive(data-role="navbar")
+    ul
+      li
+        a(href="#",class="ui-btn-active ui-state-persist") News
+      li
+        a(href="#",class="ui-btn-active ui-state-persist") Email
+      li
+        a(href="#",class="ui-btn-active ui-state-persist") Game
+
