--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,11 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    meta(name="viewport",content="width=device-width, initial-scale=1")
+    link(rel="stylesheet",href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css")
+    script(src="http://code.jquery.com/jquery-1.8.2.min.js")
+    script(src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js")
+
+    script(src='/javascripts/myFuncs.js')
   body
     block content
