--- a/views/index.jade
+++ b/views/index.jade
@@ -10,18 +10,28 @@ block content
       p Welcome to #{title}
 
     dive(data-role="content")
-      #target
+      -var linkPage="default"
+      -if (link=="news"){
+      -linkPage="http://news.stanford.edu/"
+      -}
+      -else if(link=="email"){
+      -linkPage="http://mail.qq.com/"
+      -}
+      -else if(link=="game"){
+      -linkPage="http://dl.dropboxusercontent.com/u/14723808/Game/1945kai/index.html"
+      -}
+      
 
-      iframe(src="http://www.baidu.com",width="100%",height="500px",id="iframe1",onLoad="autoResize('iframe1')")
+      iframe(src= "#{linkPage}",width="100%",height="500px",id="iframe1",onLoad="autoResize('iframe1')")
 
 
 
     dive(data-role="navbar")
       ul
         li
-          a(href="#",class="ui-btn-active ui-state-persist") News
+          a(href="/?type=news",class="ui-btn-active ui-state-persist") News
         li
-          a(href="#",class="ui-btn-active ui-state-persist") Email
+          a(href="/?type=email",class="ui-btn-active ui-state-persist") Email
         li
-          a(href="#",class="ui-btn-active ui-state-persist") Game
+          a(href="/?type=game",class="ui-btn-active ui-state-persist") Game
 
