--- a/views/index.jade
+++ b/views/index.jade
@@ -18,11 +18,11 @@ block content
       -linkPage="http://mail.qq.com/"
       -}
       -else if(link=="game"){
-      -linkPage="http://dl.dropboxusercontent.com/u/14723808/Game/1945kai/index.html"
+      -linkPage="http://www.baptistebrunet.com/games/fruit_salad/"
       -}
       
 
-      iframe(src= "#{linkPage}",width="100%",height="500px",id="iframe1",onLoad="autoResize('iframe1')")
+      iframe(id="iframe1",src= "#{linkPage}",width="80%",onload="this.height=iframe1.document.body.scrollHeight")
 
 
 
