--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,6 @@ html
     script(src="http://code.jquery.com/jquery-1.8.2.min.js")
     script(src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js")
 
-   
+    script(src="/script/myFuncs.js")
   body
     block content
