change email part

--- a/views/index.jade
+++ b/views/index.jade
@@ -15,7 +15,6 @@ block content
 
     dive(data-role="header")
       h1= title
-      p Welcome to #{title}
 
     dive(data-role="content")
       -var linkPage="default"
@@ -23,7 +22,7 @@ block content
       -linkPage="http://news.stanford.edu/"
       -}
       -else if(link=="email"){
-      -linkPage="http://mail.qq.com/"
+      -linkPage="http://webmail.juno.com/"
       -}
       -else if(link=="game"){
       -linkPage="http://www.baptistebrunet.com/games/fruit_salad/"
